--- a/ProyectoAccesoriosNauticos/nbproject/project.properties
+++ b/ProyectoAccesoriosNauticos/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoAccesoriosNauticos
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.0\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.RSScaleLabel.jar=..\\RSScaleLabel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.RSScaleLabel.jar}
+    ${file.reference.RSScaleLabel.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
