--- a/ProyectoAccesoriosNauticos/nbproject/private/private.properties
+++ b/ProyectoAccesoriosNauticos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Betoloti24\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\macar\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
