--- a/ProyectoAccesoriosNauticos/nbproject/project.properties
+++ b/ProyectoAccesoriosNauticos/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.0\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=C:\\Program Files\\NetBeans 8.0\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.mssql-jdbc-8.4.1.jre8.jar=..\\mssql-jdbc-8.4.1.jre8.jar
+file.reference.RSDragDropFiles.jar=..\\RSDragDropFiles.jar
 file.reference.RSScaleLabel.jar=..\\RSScaleLabel.jar
 includes=**
 jar.compress=false
@@ -44,7 +45,8 @@ javac.classpath=\
     ${file.reference.RSScaleLabel.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre8.jar}:\
+    ${file.reference.RSDragDropFiles.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
